samples/_failures_safe/1761256014_e33114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e1ece1a.c: In function ‘main’:
./samples/SAFE/__tmp_8e1ece1a.c:143:17: error: expected expression at end of input
  143 |                 if (!read_matrix(&a))
      |                 ^~
./samples/SAFE/__tmp_8e1ece1a.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e1ece1a.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e1ece1a.c:143:17: error: expected declaration or statement at end of input
